--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@
 APP_ENV=dev
 APP_SECRET=043b7924669612b11be1a7bede933de7
 ###< symfony/framework-bundle ###
+TRUSTED_HOSTS="[\"10.0.0.1\", \"10.0.0.2\"]"
